samples/_failures_safe/1761540789_cd45f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b61bccb.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_7b61bccb.c:152:9: error: expected declaration or statement at end of input
  152 |         default: return "UNKNOWN";
      |         ^~~~~~~
./samples/SAFE/__tmp_7b61bccb.c:152:9: error: expected declaration or statement at end of input
